fix collapse

--- a/assets/scss/private/course-detail/_index.scss
+++ b/assets/scss/private/course-detail/_index.scss
@@ -365,3 +365,20 @@
     transition: all 0.2s;
   }
 }
+.text-lotrinh-1{
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+  color: #130f40;
+  margin-bottom: 10px;
+}
+.text-ltkh-1{
+  font-weight: bold;
+}
+.card{
+  border: none;
+}
+.btn-btn-link{
+  margin-left: 50px;
+  color: black;
+}
